--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "scripts": {
     "test": "npm run babel && mocha --compilers js:babel-core/register test/index_test.js",
-    "babel": "babel src --out-dir lib",
-    "install": "npm run babel"
+    "babel": "babel src --out-dir lib"
   },
   "main": "lib/index.js",
   "dependencies": {
