--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "test": "npm run babel && mocha --compilers js:babel-core/register test/index_test.js",
-    "babel": "babel src --out-dir lib"
+    "babel": "babel src --out-dir lib",
+    "prepare": "npm run babel"
   },
   "main": "lib/index.js",
   "dependencies": {
