--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "markdown",
     "gfm"
   ],
-  "repository": "https://github.com/landakram/remark-wiki-link",
+  "repository": "https://github.com/twardoch/remark-wiki-link",
   "license": "MIT",
   "author": {
     "name": "Mark Hudnall",
@@ -16,9 +16,11 @@
     "url": "https://markhudnall.com"
   },
   "scripts": {
-    "test": "npm run babel && mocha --compilers js:babel-core/register test/index_test.js",
-    "babel": "babel src --out-dir lib",
-    "prepare": "npm run babel"
+    "test": "npm run build && mocha --compilers js:babel-core/register test/index_test.js",
+    "prepare": "npm run build",
+    "build": "babel src --out-dir lib",
+    "prepublish": "cross-env NODE_ENV=production npm run build",
+    "watch": "babel -w src --out-dir ."
   },
   "main": "lib/index.js",
   "dependencies": {
@@ -26,9 +28,9 @@
     "unist-util-map": "^1.0.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-preset-env": "^1.6.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "mocha": "^3.4.2",
     "rehype-stringify": "^3.0.0",
     "remark-parse": "^3.0.1",
