--- a/package.json
+++ b/package.json
@@ -1,42 +1,52 @@
 {
-  "name": "remark-wiki-link-a",
-  "description": "Parse and render wiki-style links",
-  "version": "0.0.2",
-  "keywords": [
-    "remark",
-    "remark-plugin",
-    "markdown",
-    "gfm"
-  ],
-  "repository": "https://github.com/twardoch/remark-wiki-link-a",
-  "license": "MIT",
-  "author": {
-    "name": "Mark Hudnall",
-    "email": "me@markhudnall.com",
-    "url": "https://markhudnall.com"
-  },
-  "scripts": {
-    "test": "npm run build && mocha --compilers js:babel-core/register test/index_test.js",
-    "prepare": "npm run build",
-    "build": "babel src --out-dir lib",
-    "prepublish": "cross-env NODE_ENV=production npm run build",
-    "watch": "babel -w src --out-dir ."
-  },
-  "main": "lib/index.js",
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "unist-util-map": "^1.0.3"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "mocha": "^3.4.2",
-    "rehype-stringify": "^3.0.0",
-    "remark-parse": "^3.0.1",
-    "remark-rehype": "^2.0.1",
-    "remark-stringify": "^3.0.1",
-    "unified": "^6.1.5",
-    "unist-util-visit": "^1.1.3"
-  }
+    "author": "Adam Twardoch <adam+github@twardoch.com> (https://twardoch.github.io)",
+    "bugs": {
+        "url": "https://github.com/twardoch/remark-wiki-link-a/issues"
+    },
+    "contributors": [
+        "Mark Hudnall <mark.hudnall@coinbase.com>"
+    ],
+    "dependencies": {
+        "babel-polyfill": "^6.23.0",
+        "unist-util-map": "^1.0.3"
+    },
+    "description": "Parse and render wiki-style links",
+    "devDependencies": {
+        "@babel/cli": "^7.8.3",
+        "@babel/core": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "mocha": "^6.2.2",
+        "rehype-stringify": "^3.0.0",
+        "remark-parse": "^3.0.1",
+        "remark-rehype": "^2.0.1",
+        "remark-stringify": "^3.0.1",
+        "unified": "^6.1.5",
+        "unist-util-visit": "^1.4.1"
+    },
+    "directories": {
+        "lib": "lib",
+        "test": "test"
+    },
+    "homepage": "https://github.com/twardoch/remark-wiki-link-a#readme",
+    "keywords": [
+        "remark",
+        "remark-plugin",
+        "markdown",
+        "gfm"
+    ],
+    "license": "MIT",
+    "main": "lib/index.js",
+    "name": "remark-wiki-link-a",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/twardoch/remark-wiki-link-a"
+    },
+    "scripts": {
+        "build": "babel src --out-dir lib",
+        "prepare": "npm run build",
+        "prepublish": "cross-env NODE_ENV=production npm run build",
+        "test": "npm run build && mocha --compilers js:babel-core/register test/index_test.js",
+        "watch": "babel -w src --out-dir ."
+    },
+    "version": "0.0.4"
 }
